# ans21-monitoring

./: .gitignore  README.md  ans21_monitoring.db  migrate_db.py  pyproject.toml
.github/workflows/: python-tests.yml  tag-version.yml
ans21_monitoring/: __init__.py  __main__.py  camera.py  database.py  image_analysis.py  logger.py  web.py
tests/: test_camera.py  test_database.py  test_image_analysis.py  test_main.py
